--- a/src/Components/StarCastContainer/index.css
+++ b/src/Components/StarCastContainer/index.css
@@ -5,7 +5,6 @@
   
   .credits-row {
     display: flex;
-    gap: 1rem;
     overflow-x: auto;
     padding-bottom: 0.5rem;
   }
@@ -15,6 +14,7 @@
     flex-direction: column;
     align-items: center;
     width: 7rem;
+    margin: 1rem;
   }
   
   .credits-image {
