--- a/src/Components/VideoPlayer/index.css
+++ b/src/Components/VideoPlayer/index.css
@@ -21,7 +21,6 @@
     width: 100%;
     height: 100%;
     display: flex;
-    gap: 1em; 
     color: white;
     z-index: 20;
     opacity: 0.8;
